<resources>
    <string name="app_name">FoodiesRecipeBook</string>
    <string name="tv_personal">Your personal guide  to be  a chef</string>
    <string name="share_recipes">Share  the  Love, Share the Recipe</string>
    <string name="kitchen">Saltify Your Global Kitchen</string>
    <string name="appe">Appetit</string>
    <string name="wel_foode">Welcome to</string>
    <string name="foode">Foodies</string>
    <string name="forget_pass">Forget Your Password</string>
    <string name="privacy_poli">Terms of use and Privacy Policy</string>
    <string name="btn_sign">Sign In</string>
    <string name="conti_with">or continue with</string>
    <string name="account">Don\'t you have an account?</string>
    <string name="sign">Sign Up</string>
    <string name="cookbook">My CookBook</string>
    <string name="sign_txt">Sign Up</string>
    <string name="btn_up">Sign Up</string>
    <string name="account_6">"I have an account? "</string>
    <string name="sign_2">Sign In</string>
    <string name="phne_nmb">Verify Your Phone Number</string>
    <string name="phne_code">Enter Code to Verify your number\n\n</string>
    <string name="phone_code">Enter Code to verify your number</string>
    <string name="sms">We have send you an SMS to number</string>
    <string name="receive_code">Don\'t you received any code?</string>
    <string name="resend_code">Resend a new code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="quickly">Egg cheese bazlama bread</string>
    <string name="bazlama">Egg bazlama bread</string>
    <string name="truffed">Cheesy truffled</string>
    <string name="egg">Egg benedict</string>
    <string name="loaded">Avocado toast</string>
    <string name="masala">Masala omelette</string>
    <string name="sandwich">Croissant sandwich</string>
    <string name="most_liked">Most liked Recipes</string>
    <string name="potato">Potato boats</string>
    <string name="toast">" Avocado toast"</string>
    <string name="croissant">Croissant sandwich</string>
    <string name="bana">Egg benedict</string>
    <string name="popular">Egg Recipes</string>
    <string name="masal">Masala omelette</string>
    <string name="criss">Croissant Sandwich</string>
    <string name="boat">Potato Boats</string>
    <string name="toat">Avocado Toast</string>
    <string name="bazlam">Bazlama Bread</string>
    <string name="cheez">Truffled Egg</string>
    <string name="eggben">Egg Benedict</string>
    <string name="sun">Tomato Pesto Egg</string>
    <string name="cooked">Cooked Recipes</string>
    <string name="potto">Potato Boats</string>
    <string name="cross">Croissant Bread</string>
    <string name="crosis">Croissant Sandwich</string>
    <string name="bebegg">Egg Bendict</string>
    <string name="tomatopes">Tomato Pesto Egg</string>
    <string name="bazbread">Bazlama Bread</string>
    <string name="_350">8</string>
    <string name="toastavo">Avocado Toast Egg</string>
    <string name="ingredi">Ingredients</string>
    <string name="ripe">1 Ripe Avocado</string>
    <string name="slice">2 Slices of bread</string>
    <string name="laregg">2 egg</string>
    <string name="lemon">lemon</string>
    <string name="lemo">lemon</string>
    <string name="salt">salt,pepper</string>
    <string name="saltp">salt</string>
    <string name="pepper">pepper</string>
    <string name="cheeze">cheese</string>
    <string name="tomatos">cherry tomatos</string>
    <string name="tomato">cherry</string>
    <string name="prep">prepare your dish</string>
    <string name="preavocado">prepare the Avocado mixture and mash it and add 1 teaspoon lemon juice and add salt and pepper for taste and mix all this</string>
    <string name="preagg">prepare te scrambled egg beat the egg in a bowl and heat the pan and cook the egg</string>
    <string name="assemble">toast the bread and spread the avocado on bread and add the scrambled egg and spread the cherry and cheese on bread</string>
    <string name="garnish">garnish with fresh herbs</string>
    <string name="toastpota">Egg Potato Boats</string>
    <string name="russet">2 potatoes</string>
    <string name="legg">4 egg</string>
    <string name="potchee">cheese, salt</string>
    <string name="pepot">pepper</string>
    <string name="bacon">bacon, butter</string>
    <string name="milk">milk</string>
    <string name="ohion">onions</string>
    <string name="cream">cream</string>
    <string name="preheat">preheat the potato and bake the potatoes 45_60mint cool and halve the potato and cut the potato in half</string>
    <string name="prescoop">scoop out the potato and mash the potato flesh add 2 teaspoon of milk and butter and pinch of salt and mix it well</string>
    <string name="mashegg">prepare the egg mixture beat the egg and cook the egg and fill the potatos boats</string>
    <string name="scrambledegg">add the scrambled egg and top with cheese and bacon then bake the potatoes boats until cheese melts then garnish with green onion</string>
    <string name="masalaome">Masala Omelette</string>
    <string name="onion1">onion</string>
    <string name="largegg">2 large egg</string>
    <string name="mastomato">tomatoes</string>
    <string name="greenchilli">green chilli</string>
    <string name="olive">oil</string>
    <string name="saltpeppe">salt, pepper</string>
    <string name="eggmixt">prepare the egg mixture and mash it in a bowl then chope the onion and add in egg</string>
    <string name="chopta">add 1 tomato and 2 green chillis in mixture and 1 pinch salt</string>
    <string name="addred">"add half teaspoon pepper and mix it well then put into pan and cook it "</string>
    <string name="herb">when it cooked add green herbs for garnishing and then serve</string>
    <string name="bazlamabre">Cheese Bazlama Bread</string>
    <string name="bazlameg">eggs</string>
    <string name="bazbutter">butter</string>
    <string name="bazlamabrea">baz bread</string>
    <string name="ceebaz">cheese</string>
    <string name="peppermas">pepper</string>
    <string name="bazsalt">salt</string>
    <string name="herbs">herbs</string>
    <string name="bazbrea">prepare the egg mixture beat it and then add a pinch of salt and pepper</string>
    <string name="heategg">cook the egg heat the pan and scrambled the egg</string>
    <string name="prebazl">then prepare the bazlama bread and cut it in horizontally</string>
    <string name="addher">"then stuff the bazlama bread and add all mixture in bread and add cheese and then serve "</string>
    <string name="crosse">Croissant Sandwich</string>
    <string name="croisssan">croissant</string>
    <string name="buttersan">butter</string>
    <string name="cheesan">cheese</string>
    <string name="tomatsan">tomato</string>
    <string name="eggbend">Egg Benedict</string>
    <string name="sundrie">Dried Pesto Egg</string>
    <string name="truee">Cheesy Truffled Egg</string>
    <string name="tomapes">tomato pes</string>
    <string name="basil">basil</string>
    <string name="breadpes">bread</string>
    <string name="oilpes">oil</string>
    <string name="garlic">garlic</string>
    <string name="bazl">Bazlama Bread</string>
    <string name="avoca">Avocado Toast</string>
    <string name="aretr">Truffled Egg</string>
    <string name="avocad">Avocado Egg</string>

</resources>