<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AvocadoEgg">
    <ImageView
        android:id="@+id/img_frameavo"
        android:layout_width="500dp"
        android:layout_height="450dp"
        android:src="@drawable/loaded_avocado_toast_scrambled_egg"
        android:layout_marginBottom="490dp"
        />
    <ImageView
        android:id="@+id/img_frame_base"
        android:layout_width="750dp"
        android:layout_height="750dp"
        android:src="@drawable/head_base2"
        android:layout_marginTop="140dp"
        />
    <ImageView
        android:id="@+id/img_frame_logo"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:src="@drawable/download_logo"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/recipie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toastavo"
        android:fontFamily="@font/dancing"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/orgl"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="290dp"
        android:layout_marginStart="90dp"
        android:textAlignment="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/custom_line"
        android:layout_marginTop="350dp"
        />
    <TextView
        android:id="@+id/tv_frame_avo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredi"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="365dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:id="@+id/lay_ripe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_frame_avo1"
        >
    <ImageView
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:src="@drawable/dot"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ripe"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lemo"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
</LinearLayout>
    <LinearLayout
        android:id="@+id/lay_ripe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ripe1"
        >
    <ImageView
        android:layout_width="10dp"
        android:layout_height="20dp"
        android:src="@drawable/dot"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slice"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saltp"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_ripe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ripe"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laregg"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepper"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_ripe4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ripe3"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheeze"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="52dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomato"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/custom_line"
        android:layout_below="@id/lay_ripe4"
        />
    <TextView
        android:id="@+id/tv_frame_prepare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prep"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
       android:layout_below="@id/lay_ripe4"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:id="@+id/lay_prepre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_frame_prepare">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preavocado"
        android:textStyle="normal"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_prepre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_prepre">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preagg"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_prepre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_prepre1">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assemble"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_prepre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_prepre2">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garnish"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
</RelativeLayout>