<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TruffledEgg">

    <ImageView
        android:id="@+id/img_truff1"
        android:layout_width="500dp"
        android:layout_height="450dp"
        android:src="@drawable/cheesy_truffled_scrambled_eggs"
        android:layout_marginBottom="490dp"
        />
    <ImageView
        android:id="@+id/img_tryff2"
        android:layout_width="750dp"
        android:layout_height="750dp"
        android:src="@drawable/head_base2"
        android:layout_marginTop="140dp"
        />
    <ImageView
        android:id="@+id/img_truff3"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:src="@drawable/download_logo"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/tv_truffe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truee"
        android:fontFamily="@font/dancing"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/orgl"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="290dp"
        android:layout_marginStart="100dp"
        android:textAlignment="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/custom_line"
        android:layout_marginTop="350dp"
        />
    <TextView
        android:id="@+id/tv_trueef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredi"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="365dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:id="@+id/lay_ruef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_trueef"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russet"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/legg"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_ruef1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ruef"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potchee"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepot"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_ruefe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ruef1"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bacon"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_pot4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_ruefe3"
        >
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ohion"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/custom_line"
        android:layout_below="@id/lay_pot4"
        />
    <TextView
        android:id="@+id/tv_truffe5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prep"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp"
        android:layout_below="@id/lay_pot4"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:id="@+id/lay_scramb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_truffe5">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preheat"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_scramb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_scramb3">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescoop"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_cheesy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_scramb2">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mashegg"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay_cheesy4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lay_cheesy1">
        <ImageView
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scrambledegg"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
    </LinearLayout>
</RelativeLayout>